# BackboardDetection

./: .gitignore  CMakeLists.txt
include/: openni_frame_source_albert.h
src/: backboard_detection.cpp  backboard_detection_v1.1.cpp  backboard_detection_v2.cpp  backboard_detection_v3.cpp  backboard_detection_v4.cpp  backboard_detection_v5.cpp  backboard_detection_v8.4.cpp  communication_test.cpp  communication_test_v1.cpp  openni_frame_source_albert.cpp
src/legacy/: backboard_detection_v1.cpp  backboard_detection_v3.1.cpp  backboard_detection_v6.cpp  backboard_detection_v7.cpp  backboard_detection_v8.1.cpp  backboard_detection_v8.2.cpp  backboard_detection_v8.3.cpp  backboard_detection_v8.5.cpp  backboard_detection_v8.6.cpp  backboard_detection_v8.cpp  communication.cpp
